# QR-CameraApp

./: main.py  pyproject.toml
backend/: Dockerfile  app.py  requirements.txt
backend/templates/: index.html  upload.html
