[project]
name = "qr-camera-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "eventlet>=0.40.3",
    "flask>=3.1.2",
    "flask-socketio>=5.5.1",
    "gunicorn>=23.0.0",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
    "qrcode>=8.2",
]
